[workspace]
members = ["shared", "leader", "worker"]
resolver = "3"

[workspace.dependencies]
anyhow = { version = "1.0.97", features = ["backtrace"] }
thiserror = "2.0.12"

async-trait = "0.1.87"

axum = { version = "0.8.1", features = ["http2", "macros", "tower-log"] }
reqwest = { version = "0.12.14", features = ["rustls-tls", "json"] }

clap = { version = "4.5.32", features = ["env", "derive"] }

hyper = { version = "1.6.0", features = ["full", "http2", "server"] }
hyper-rustls = "0.27.5"

rcgen = "0.13.2"
rustls = "0.23.23"
rustls-pemfile = "2.2.0"

serde = "1.0.219"
serde_json = "1.0.140"

tokio = { version = "1.44.1", features = ["full"] }
tokio-rustls = "0.26.2"

tower = { version = "0.5.2", features = ["limit"] }
tower-http = { version = "0.6.2", features = ["full"] }

tracing = { version = "0.1.41", features = ["log"] }
tracing-appender = "0.2.3"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
