[workspace]
members = ["shared", "leader", "worker"]
resolver = "3"

[workspace.dependencies]
anyhow = { version = "1.0.97", features = ["backtrace"] }

async-trait = "0.1.87"
time = "0.3.39"

reqwest = { version = "0.12.14", features = ["rustls-tls", "json"] }
warp = { version = "0.3.7", features = ["tls"] }

clap = { version = "4.5.32", features = ["env", "derive"] }

hyper = { version = "1.6.0", features = ["full", "http2", "server"] }
hyper-rustls = "0.27.5"

rcgen = { version = "0.13.2", features = ["x509-parser", "pem"] }
rustls = "0.23.23"
rustls-pki-types = { version = "1.11.0", features = ["std"] }
x509-parser = "0.17.0"
pem = "3.0.5"

tokio = { version = "1.44.1", features = ["full"] }
tokio-rustls = "0.26.2"

tracing = { version = "0.1.41", features = ["log"] }
tracing-appender = "0.2.3"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
