[package]
name = "leader"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }

anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
rcgen = { workspace = true }
rustls-pki-types = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }
