[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
pem = { workspace = true }
rcgen = { workspace = true }
rustls-pki-types = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
assert_fs = "1.0.13"
x509-parser = { workspace = true, features = ["verify"] }
